# blockjobs

./: .gitignore  .gitmodules  Notes  README.md  StressContract.js  StressContract.mjs  accounts.sh  build_deploy.sh  clear.sh  deploy.sh  index.html  notes  onlydeploy.sh  package.json  src.eb46049d.css  src.eb46049d.css.map  update.sh
contract/: Cargo.toml  README.md  build.sh  compile.js
contract/ft/: Cargo.toml  Notes  build.sh  deploy.sh
contract/ft/src/: lib.rs
contract/marketplace/: Cargo.toml  Notes  Unused  build.sh
contract/marketplace/src/: event.rs  external.rs  internal.rs  lib.rs  nft_core.rs  user.rs
contract/mediator/: Cargo.toml  Notes  build.sh  test.sh
contract/mediator/neardev/: dev-account  dev-account.env
contract/mediator/src/: events.rs  lib.rs
contract/sales/: Cargo.toml
contract/sales/src/: lib.rs
contract/src/: categories.rs  internal.rs  lib.rs  nft_core.rs  user.rs
contract/test/sim/: main.rs
frontend/: .env  package.json  tailwind.config.js
frontend/assets/: categoriesData.json  idiomsData.json  main.css  servicesTestData.json  tailwind.css  tokensData.json  userTestData.json
frontend/public/: index.html
frontend/src/: App.js  babel.config.js  config.js  contractsAccounts.json  countriesData.json  firebase.js  index.html  index.js  state.js  tokensData.json  utils.js
frontend/src/assets/: main.css  tailwind.css
frontend/src/components/: BlockTokenDialog.js  Chat.js  (+17 more)
sim/__tests__/: main.ava.ts
src/: App.js  config.js  index.html  index.js
src/assets/: main.css  tailwind.css
src/components/: NavBar.js
(+17 files in other folders)
