[package]
name = "marketplace"
version = "0.1.0"
authors = ["dariofs.near","stolkerve.near"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-env = "0.1.10"

[profile.release]
codegen-units = 24
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
